--- a/Desafio-10/package.json
+++ b/Desafio-10/package.json
@@ -14,7 +14,10 @@
     "dependencies": {
         "express": "^4.18.1",
         "express-handlebars": "^6.0.6",
-        "mongoose": "^6.7.0"
+        "firebase": "^9.13.0",
+        "mongoose": "^6.7.0",
+        "firebase-admin": "^11.2.0",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "dotenv": "^16.0.2",
