--- a/Desafio-10/.env
+++ b/Desafio-10/.env
@@ -2,4 +2,4 @@ NODE_PORT='8080'
 NODE_ENV='local'
 BASE_HOST = 'http://localhost:8080'
 #DEBUG=*
-TIPO_PERSISTENCIA='firebase'
+TIPO_PERSISTENCIA='mongodb'
