--- a/Desafio-11/package.json
+++ b/Desafio-11/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "express": "^4.18.1",
     "hbs": "~4.0.4",
     "knex": "^2.3.0",
