--- a/Desafio-11/package.json
+++ b/Desafio-11/package.json
@@ -14,10 +14,8 @@
     "@faker-js/faker": "^7.6.0",
     "express": "^4.18.1",
     "hbs": "~4.0.4",
-    "knex": "^2.3.0",
-    "mysql": "^2.18.1",
     "socket.io": "^4.5.2",
-    "sqlite3": "^5.1.2"
+    "normalizr": "^3.6.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.2",
