--- a/Desafio-12/package.json
+++ b/Desafio-12/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "desafio-10",
+    "name": "desafio-12",
     "version": "1.0.0",
     "main": "app.js",
     "scripts": {
@@ -10,14 +10,13 @@
     "keywords": [],
     "author": "Sandra Salvatico",
     "license": "ISC",
-    "description": "Projecto Segunda Entrega - Backed-End CODER (Desafio 10)",
+    "description": "Login - Backed-End CODER (Desafio 12)",
     "dependencies": {
-        "express": "^4.18.1",
-        "express-handlebars": "^6.0.6",
-        "firebase": "^9.13.0",
-        "mongoose": "^6.7.0",
-        "firebase-admin": "^11.2.0",
-        "uuid": "^9.0.0"
+        "express": "^4.18.1", 
+        "hbs": "~4.0.4",
+        "connect-mongo": "^4.6.0",
+        "express-session": "^1.17.3",
+        "cookie-parser": "^1.4.6"
     },
     "devDependencies": {
         "dotenv": "^16.0.2",
