--- a/Desafio-14/package.json
+++ b/Desafio-14/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "app.js",
     "scripts": {
-        "start": "node ."
+        "start": "node . -p 8085"
     },
     "keywords": [],
     "author": "Sandra Salvatico",
@@ -15,9 +15,10 @@
         "express": "^4.18.1",
         "express-session": "^1.17.3",
         "hbs": "~4.0.4",
+        "minimist": "^1.2.7",
+        "mongoose": "^6.7.0",
         "passport": "^0.6.0",
-        "passport-local": "^1.0.0",
-        "mongoose": "^6.7.0"
+        "passport-local": "^1.0.0"
     },
     "devDependencies": {
         "dotenv": "^16.0.2",
