--- a/Desafio-16/package.json
+++ b/Desafio-16/package.json
@@ -11,6 +11,7 @@
     "description": "Objeto Process - Backed-End CODER (Desafio 14)",
     "dependencies": {
         "bcrypt": "^5.1.0",
+        "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
@@ -18,7 +19,8 @@
         "minimist": "^1.2.7",
         "mongoose": "^6.7.0",
         "passport": "^0.6.0",
-        "passport-local": "^1.0.0"
+        "passport-local": "^1.0.0",
+        "winston": "^3.8.2"
     },
     "devDependencies": {
         "dotenv": "^16.0.2",
