--- a/Desafio-16/package.json
+++ b/Desafio-16/package.json
@@ -3,13 +3,15 @@
     "version": "1.0.0",
     "main": "app.js",
     "scripts": {
-        "start": "node . -p 8085"
+        "test": "node benchmark.js",
+        "start": "0x app.js -p 8081"
     },
     "keywords": [],
     "author": "Sandra Salvatico",
     "license": "ISC",
     "description": "Objeto Process - Backed-End CODER (Desafio 14)",
     "dependencies": {
+        "autocannon": "^7.10.0",
         "bcrypt": "^5.1.0",
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
