--- a/Desafio-18/package.json
+++ b/Desafio-18/package.json
@@ -20,6 +20,7 @@
         "hbs": "~4.0.4",
         "minimist": "^1.2.7",
         "mongoose": "^6.7.0",
+        "nodemailer": "^6.8.0",
         "passport": "^0.6.0",
         "passport-local": "^1.0.0",
         "winston": "^3.8.2"
