--- a/Desafio-18/package.json
+++ b/Desafio-18/package.json
@@ -16,6 +16,7 @@
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "express": "^4.18.1",
+        "express-fileupload": "^1.4.0",
         "express-session": "^1.17.3",
         "hbs": "~4.0.4",
         "minimist": "^1.2.7",
