--- a/Desafio-18/package.json
+++ b/Desafio-18/package.json
@@ -24,7 +24,9 @@
         "nodemailer": "^6.8.0",
         "passport": "^0.6.0",
         "passport-local": "^1.0.0",
-        "winston": "^3.8.2"
+        "winston": "^3.8.2",
+        "socket.io": "^4.5.2",
+        "normalizr": "^3.6.1"
     },
     "devDependencies": {
         "dotenv": "^16.0.2",
