--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -23,7 +23,9 @@
         "passport-local": "^1.0.0",
         "winston": "^3.8.2",
         "bcrypt": "^5.1.0",
-        "nodemailer": "^6.8.0"
+        "nodemailer": "^6.8.0",
+        "socket.io": "^4.5.2",
+        "normalizr": "^3.6.1"
     },
     "devDependencies": {
         "dotenv": "^16.0.2",
