new commit change 7_3

--- a/proyecto/.env
+++ b/proyecto/.env
@@ -1,3 +1,9 @@
 NODE_ENV='local'
 #DEBUG=*
-TIPO_PERSISTENCIA='mongodb'
+TIPO_PERSISTENCIA ='mongo'
+DBURI = 'mongodb://localhost:27017/ecommerce'
+MAIL_HOST = 'smtp.ethereal.email'
+MAIL_PORT = 587
+MAIL_AUTH_USER= 'chasity.hauck@ethereal.email'
+MAIL_AUTH_PASS= 'YgPCxMDERHTVkxEVWX'
+SESION_SECRET='3biXMV8#m5s7'
