--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "test": "",
-        "start": "node .",
+        "start": "node ./bin/www",
         "dev": "nodemon app.js"
     },
     "keywords": [],
@@ -13,19 +13,19 @@
     "license": "ISC",
     "description": "Proyecto  - Backed-End CODER",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "compression": "^1.7.4",
         "express": "^4.18.1",
         "express-fileupload": "^1.4.0",
         "express-session": "^1.17.3",
         "hbs": "~4.0.4",
         "mongoose": "^6.7.0",
+        "nodemailer": "^6.8.0",
+        "normalizr": "^3.6.1",
         "passport": "^0.6.0",
         "passport-local": "^1.0.0",
-        "winston": "^3.8.2",
-        "bcrypt": "^5.1.0",
-        "nodemailer": "^6.8.0",
-        "socket.io": "^4.5.2",
-        "normalizr": "^3.6.1"
+        "socket.io": "^4.6.1",
+        "winston": "^3.8.2"
     },
     "devDependencies": {
         "dotenv": "^16.0.2",
